feat: write service and handler to health check, update main, swagger docs
